monolithic-objects/src/main/java/com/ttulka/blog/samples/good/product/ChangeProductPrice.java
package com.ttulka.blog.samples.good.product;

public interface ChangeProductPrice {

    void change(ProductId id, Money newPrice);
}
